[package]
name = "chesstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
