[package]
name = "chesstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
